# automata-logic-intelligence

./: .dockerignore  .gitignore  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.minimal  Dockerfile.simple  Dockerfile.working  Makefile  README.md  TEST_DOCUMENTATION.md  debug_pda.py  example-tests-json.json  main.tex  pytest-tests.py  pytest.ini  quickstart.py  quickstart.sh  setup.py  test_nfa.py  test_pda.py
.amazonq/cli-todo-lists/: 1758406605097.json  1758688012771.json
.github/workflows/: configure_from_date.py
automata-theory-project/: Makefile  README.md  balanced_parens.json  copy_language.json  hadamard.json  pyproject.toml
automata-theory-project/applications/compiler_design/: tiny_lexer_demo.py
automata-theory-project/applications/ml_connections/: wfst_concepts.md
automata-theory-project/applications/pattern_matching/: regex_cleaning_example.ipynb
automata-theory-project/docs/: problem_bank.md  syllabus.md
automata-theory-project/notebooks/: 01_regular_languages.ipynb  02_cfg_pda.ipynb  02_cfg_pda_part2.py  03_turing_decidability.ipynb
automata-theory-project/src/: cli.py  web_playground.py
automata-theory-project/src/automata/: __init__.py  dfa.py  lba.py  nfa.py  pda.py  qfa.py  tm.py
automata-theory-project/templates/: index.html
automata-theory-project/tests/: test_dfa.py  test_lba.py  test_nfa.py  test_qfa.py  test_tm.py
intelligent-systems-project/: AGENTS.md  Makefile  README.md  directory_contents.txt  pyproject.toml  requirements.txt  setup.py
intelligent-systems-project/Assignment1/: Algorithms.py
intelligent-systems-project/applications/: __init__.py  game_ai_demo.py  mdp_robot_navigation.py  medical-diagnosis-app.py  medical_diagnosis_bayes.py  pathfinding_demo.py  reinforcement_learning_trader.py
intelligent-systems-project/assignments/Assignment1/: Algorithms.py  autograder.py  searchAgents.py  test_imports.py
intelligent-systems-project/docs/: api_reference.md  autograder-docs.md  game_playing.md  search_algorithms.md
intelligent-systems-project/docs/guides/: mdp_reinforcement.md
intelligent-systems-project/notebooks/: 01_search_fundamentals.ipynb  01_search_fundamentals_completed.ipynb  01_search_fundamentals_minimal.ipynb  02_implementing_bfs_dfs.ipynb  04_astar_heuristics.ipynb
intelligent-systems-project/notebooks/completed/: 07_pacman_assignment.ipynb
intelligent-systems-project/notebooks/exercises/: 01_search_fundamentals.ipynb  03_uniform_cost_search.ipynb
intelligent-systems-project/src/: __init__.py  multi-agent.py
intelligent-systems-project/src/games/: __init__.py  alphabeta.py  game_state.py  minimax.py
intelligent-systems-project/src/learning/: __init__.py  qlearning.py
intelligent-systems-project/src/mdp/: __init__.py  agents.py  mdp.py  value_iteration.py
intelligent-systems-project/src/search/: __init__.py  algorithms.py  heuristics.py  problem.py  utils.py
intelligent-systems-project/templates/: game_agent_template.py  mdp_agent_template.py  search_agent_template.py  test_template.py
intelligent-systems-project/tests/: __init__.py  test-suite-impl.py  test_games.py  test_learning.py  test_mdp.py  test_search.py
