[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automata-theory"
version = "0.1.0"
description = "A Python library for automata theory"
authors = [{name = "Author", email = "author@example.com"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "jupyter", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]
